fix height of the body to prevent navbar from getting cut off

--- a/public/stylesheets/runs/index.css
+++ b/public/stylesheets/runs/index.css
@@ -1,6 +1,7 @@
 main {
   background-image: none;
   margin-top: 50px;
+  height: 100vh;
 }
 
 main > div {
